kubernetes-security/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-web
  namespace: homework
spec:
  replicas: 3
  selector:
    matchLabels:
      app: k8s-web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      name: k8s-web
      labels:
        app: k8s-web
    spec:
      containers:
      - name: k8s-web
        image: kirillshakh/k8s_course:v0.0.2
        readinessProbe:
          httpGet:
            port: 8000
            path: /index.html
        volumeMounts:
        - name: app
          mountPath: /app
        - name: configmap-volume
          mountPath: /app/conf
      volumes:
      - name: app
        persistentVolumeClaim:
          claimName: k8s-web-pvc
      - name: configmap-volume
        configMap:
          name: k8s-web-cm
      serviceAccountName: monitoring
