kubernetes-security/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-web-ing
  namespace: homework
spec:
  ingressClassName: nginx
  rules:
  - host: "homework.otus"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8s-web-svc
            port:
              number: 80
